# routes/usersRoute.js
@@ -2,17 +2,18 @@ const express = require('express');
 const router = express.Router();
 
 const validation = require('../middleware/validate');
+const auth = require('../middleware/auth');
 
 const usersController = require('../controllers/usersController')
 
-router.get('/', usersController.getAllUsers);
+router.get('/', auth.ensureAuth, usersController.getAllUsers);
 
-router.get('/:id', usersController.getOneUser);
+router.get('/:id', auth.ensureAuth, usersController.getOneUser);
 
-router.post('/', validation.saveUser, usersController.addUser);
+router.post('/', auth.ensureAuth, validation.saveUser, usersController.addUser);
 
-router.put('/:id', validation.saveUser, usersController.updateUser);
+router.put('/:id', auth.ensureAuth, validation.saveUser, usersController.updateUser);
 
-router.delete('/:id', usersController.deleteUser);
+router.delete('/:id', auth.ensureAuth, usersController.deleteUser);
 
 module.exports = router;
